style.css テンプレート修正

--- a/style.css
+++ b/style.css
@@ -1,17 +1,1 @@
-h1 {
-  background-color: #ffe100;
-}
-
-p {
-  color: #37bd82;
-}
-
-p a {}
-
-.abc {
-  background-color: purple;
-}
-
-#xyz {
-  background-color: red;
-}
+@charset 'utf-8';
