--- a/lesson6/css/style.css
+++ b/lesson6/css/style.css
@@ -197,3 +197,145 @@ h3 {
   text-align: center;
   font-size: .75rem;
 }
+
+@media screen and (min-width: 768px) {
+  h1 {
+    border-top: 16px solid #fa982d;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  h1 img {
+    width: 960px;
+  }
+
+  h2 {
+    margin-bottom: 32px;
+  }
+
+  h2 img {
+    height: 4rem;
+  }
+
+  h3 {
+    margin-bottom: 24px;
+    font-size: 1.25rem;
+  }
+
+  .feature {
+    margin-bottom: 80px;
+  }
+
+  .feature-wrap {
+    width: 768px;
+    margin: 0 auto 40px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .feature_01,
+  .feature_02 {
+    width: 344px;
+    margin: 0;
+  }
+
+  .feature_img {
+    margin-bottom: 24px;
+  }
+
+  .feature_text {
+    font-size: 1rem;
+  }
+
+  .book-more a {
+    padding: 16px 96px;
+    font-size: 1rem;
+  }
+
+  .book-more a:hover {
+    background-color: rgba(0,0,0,.2);
+  }
+
+  .contents-list {
+    margin-bottom: 80px;
+    padding: 32px 0;
+  }
+
+  .contents-list ul {
+    width: 640px;
+    font-size: 1rem;
+  }
+
+  .author {
+    margin-bottom: 80px;
+  }
+
+  .author dl {
+    width: 680px;
+  }
+
+  .author dl dt {
+    margin-bottom: 16px;
+    padding-bottom: 8px;
+    font-size: 1.25rem;
+  }
+
+  .author dl dd {
+    margin-bottom: 40px;
+    font-size: 1rem;
+  }
+
+  .book-info {
+    height: 80vh;
+  }
+
+  .book-info-wrap {
+    width: 680px;
+    padding: 32px;
+  }
+
+  .book-info-wrap p {
+    margin: 0 0 32px;
+    font-size: 2rem;
+  }
+
+  .book-info-wrap ul {
+    font-size: 1rem;
+  }
+
+  .book-info-wrap ul li {
+    display: inline-block;
+    margin-right: 16px;
+  }
+
+  .footer-info {
+    padding: 32px 0 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .footer-info ul {
+    margin: 0;
+  }
+
+  .footer-info ul li {
+    margin: 0 16px;
+  }
+
+  .footer-info ul li img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .copyright {
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (min-width: 992px) {
+  h1 {
+    padding-top: 40px;
+  }
+}
