--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -146,4 +146,101 @@ section {
   width: 200px;
   margin: 0;
   text-align: left;
+}
+
+.gnav-toggle {
+  position: relative;
+  margin-top: 12px;
+}
+
+.gnav-hidden {
+  display: none;
+}
+
+#gnav-open {
+  display: inline-block;
+  width: 30px;
+  height: 22px;
+  vertical-align: middle;
+}
+#gnav-open span,
+#gnav-open span::before,
+#gnav-open span::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 25px;
+  border-radius: 3px;
+  background: #555;
+  display: block;
+  cursor: pointer;
+}
+#gnav-open span::before {
+  bottom: -8px;
+}
+#gnav-open span::after {
+  bottom: -16px;
+}
+
+#gnav-close {
+  position: fixed;
+  z-index: 90;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, width 0s 0.3s, height 0s 0.3s;
+  width: 0;
+  height: 0;
+}
+#gnav-input:checked ~ #gnav-close {
+  opacity: 0.5;
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.3s ease-in-out;
+}
+
+#gnav-content {
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 300;
+  width: 70%;
+  max-width: 300px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: 0.3s ease-in-out;
+  transform: translateX(-105%);
+}
+#gnav-input:checked ~ #gnav-content {
+  transform: translateX(0%);
+}
+
+.gnav-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+  text-transform: uppercase;
+}
+
+.gnav-item {
+  border-bottom: 2px dotted #eee;
+  margin: 10px;
+  padding-bottom: 20px;
+}
+.gnav-item a {
+  color: #fff;
+  font-size: 12px;
+  display: block;
+  width: 200px;
+  text-align: center;
+}
+.gnav-item a::first-line {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 100px;
 }/*# sourceMappingURL=style.css.map */
