--- a/lesson7/sass/_top.scss
+++ b/lesson7/sass/_top.scss
@@ -19,3 +19,115 @@
   margin: 0;
   text-align: left;
 }
+
+// ナビゲーション
+.gnav-toggle {
+  position: relative;
+  margin-top: 12px;
+}
+
+.gnav-hidden {
+  display: none;
+}
+
+#gnav-open {
+  display: inline-block;
+  width: 30px;
+  height: 22px;
+  vertical-align: middle;
+
+  span,
+  span::before,
+  span::after {
+    content: '';
+    position: absolute;
+    height: 3px;
+    width: 25px;
+    border-radius: 3px;
+    background: #555;
+    display: block;//おまけ
+    cursor: pointer;
+  }
+
+  span::before {
+    bottom: -8px;
+  }
+
+  span::after {
+    bottom: -16px;
+  }
+}
+
+#gnav-close {
+  // display: none;
+  position: fixed;
+  z-index: 90;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0;
+  transition:
+    opacity .3s ease-in-out,
+    width 0s .3s,
+    height 0s .3s
+    ;
+  width: 0;
+  height: 0;
+
+  #gnav-input:checked ~ & {
+    // display: block;
+    opacity: .5;
+    width: 100%;
+    height: 100%;
+    transition: opacity .3s ease-in-out;
+  }
+}
+
+
+#gnav-content {
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 300;
+  width: 70%;
+  max-width: 300px;
+  height: 100%;
+  background-color: rgba(0,0,0,.8);
+  transition: .3s ease-in-out;
+  transform: translateX(-105%);
+
+  #gnav-input:checked ~ & {
+    transform: translateX(0%);
+  }
+}
+
+.gnav-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+  text-transform: uppercase;
+}
+
+.gnav-item {
+  border-bottom: 2px dotted #eee;
+  margin: 10px;
+  padding-bottom: 20px;
+
+  a {
+    color: #fff;
+    font-size: 12px;
+    display: block;
+    width: 200px;
+    text-align: center;
+
+    &::first-line {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 100px;
+    }
+  }
+}
