--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -1,3 +1,8 @@
+:root {
+  --main-color: #85a7cc;
+  --main-color-dark: #527acc;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
@@ -21,7 +26,7 @@ h1, h2, h3 {
 }
 
 h3 {
-  color: #85a7cc;
+  color: var(--main-color);
   font-size: 14px;
   margin-bottom: 20px;
 }
@@ -147,6 +152,11 @@ section {
   margin: 0;
   text-align: left;
 }
+@media screen and (min-width: 768px) {
+  .logo-area {
+    width: 250px;
+  }
+}
 
 .gnav-toggle {
   position: relative;
@@ -243,4 +253,169 @@ section {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 100px;
+}
+
+@media screen and (min-width: 768px) {
+  .gnav-menu {
+    flex-direction: row;
+    padding-top: 15px;
+    margin: 0;
+  }
+  .gnav-item {
+    border-bottom: none;
+    margin: 0;
+    padding-bottom: 0;
+  }
+  .gnav-item a {
+    color: #333;
+    width: 120px;
+  }
+  .gnav-item a:hover {
+    color: var(--main-color);
+  }
+}
+.mv-area {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(../img/hero.jpg);
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .mv-area {
+    width: 100%;
+    height: 600px;
+  }
+}
+
+.mv-title {
+  color: #fff;
+  text-shadow: 0 0 3px #333;
+  margin-top: 70px;
+}
+@media screen and (min-width: 768px) {
+  .mv-title {
+    margin-top: 90px;
+  }
+}
+
+.info-area {
+  background-color: var(--main-color);
+}
+
+.info-txt {
+  color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .info-content {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+  .info-txt {
+    flex: 1 0 50%;
+    margin-left: 30px;
+  }
+  info-area img {
+    flex: 1 0 50%;
+  }
+}
+.service-area {
+  background-color: #fff;
+}
+
+.service-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.service-item {
+  flex: 40%;
+  text-align: center;
+  padding: 20px 20px 0;
+  margin: 5px;
+  border: 3px solid var(--main-color-dark);
+  border-radius: 10px;
+}
+.service-item img {
+  width: 120px;
+}
+
+@media screen and (min-width: 768px) {
+  .service-content {
+    flex-wrap: nowrap;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .service-item {
+    flex: 1;
+  }
+}
+.plan-area {
+  background-color: #f0f0f0;
+}
+
+.plan-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.plan-item {
+  background-color: #fff;
+  margin-bottom: 30px;
+  box-shadow: 1px 1px 3px #aaa;
+}
+
+.plan-info {
+  padding: 0 15px 15px;
+}
+
+.plan-title {
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 2px solid var(--main-color-dark);
+}
+
+.plan-price {
+  text-align: center;
+  padding: 10px;
+  border: 2px solid var(--main-color-dark);
+}
+
+.plan-list li::before {
+  content: "";
+  background: url(../img/list-marker.svg) no-repeat;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 10px 3px;
+}
+
+@media screen and (min-width: 768px) {
+  .plan-content {
+    flex-direction: row;
+  }
+  .plan-item {
+    flex: 1;
+    margin-bottom: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+.access-area {
+  padding-bottom: 0;
+}
+.access-area img {
+  display: block;
+  max-width: 280px;
+  max-height: 280px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 10px auto 30px;
 }/*# sourceMappingURL=style.css.map */
