--- a/lesson7/sass/_top.scss
+++ b/lesson7/sass/_top.scss
@@ -1,3 +1,5 @@
+@use 'mixins' as *;
+
 // headerスタイル
 .header {
   position: fixed;
@@ -18,6 +20,11 @@
   width: 200px;
   margin: 0;
   text-align: left;
+
+  @include mq {
+    width: 250px;
+  }
+  
 }
 
 // ナビゲーション
@@ -129,5 +136,184 @@
       font-weight: bold;
       margin-bottom: 100px;
     }
+  }
+}
+
+@include mq {
+  .gnav-menu {
+    flex-direction: row;
+    padding-top: 15px;
+    margin: 0;
+  }
+  .gnav-item {
+    border-bottom: none;
+    margin: 0;
+    padding-bottom: 0;
+
+    a {
+      color: #333;
+      width: 120px;
+
+      &:hover {
+        color: var(--main-color);
+      }
+    }
+  }
+}
+
+// メインビジュアル
+.mv-area {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(../img/hero.jpg);
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  @include mq {
+    width: 100%;
+    height: 600px;
+  }
+}
+
+.mv-title {
+  color: #fff;
+  text-shadow: 0 0 3px #333;
+  margin-top: 70px;
+
+  @include mq {
+    margin-top: 90px;
+  }
+}
+
+// レンタルスペースの紹介
+.info-area {
+  background-color: var(--main-color);
+}
+.info-txt {
+  color: #fff;
+}
+
+@include mq {
+  .info-content {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+  .info-txt {
+    flex: 1 0 50%;
+    margin-left: 30px;
+  }
+  info-area img {
+    flex: 1 0 50%;
+  }
+}
+
+// サービス
+.service-area {
+  background-color: #fff;
+}
+
+.service-content {
+  display: flex;
+  flex-wrap: wrap;
+  // gap: 10px;
+}
+
+.service-item {
+  flex: 40%; //flex-basis: 40%;
+  text-align: center;
+  padding: 20px 20px 0;
+  margin: 5px;
+  border: 3px solid var(--main-color-dark);
+  border-radius: 10px;
+
+  img {
+    width: 120px;
+    // margin: 0 auto; //display: blockの場合に限る
+  }
+}
+
+@include mq {
+  .service-content {
+    flex-wrap: nowrap;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .service-item {
+    flex: 1; // flex-grow: 1
+  }
+}
+
+// プラン
+.plan-area {
+  background-color: #f0f0f0;
+}
+
+.plan-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.plan-item {
+  background-color: #fff;
+  margin-bottom: 30px;
+  box-shadow: 1px 1px 3px #aaa;
+}
+
+.plan-info {
+  padding: 0 15px 15px;
+}
+
+.plan-title {
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 2px solid var(--main-color-dark);
+}
+
+.plan-price {
+  text-align: center;
+  padding: 10px;
+  border: 2px solid var(--main-color-dark);
+}
+
+.plan-list li::before {
+  content: '';
+  background: url(../img/list-marker.svg) no-repeat;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 10px 3px;
+}
+
+@include mq {
+  .plan-content {
+    flex-direction: row;
+  }
+
+  .plan-item {
+    flex: 1;
+    margin-bottom: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+
+// アクセス
+.access-area {
+  padding-bottom: 0;
+
+  img {
+    display: block;
+    max-width: 280px;
+    max-height: 280px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 10px auto 30px;
   }
 }
