--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -1,12 +1,17 @@
 :root {
   --main-color: #85a7cc;
   --main-color-dark: #527acc;
+  --bg-color: #f0f0f0;
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -131,6 +136,11 @@ section {
   }
   .pc-only {
     display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  a[href^="tel:"] {
+    pointer-events: none;
   }
 }
 .header {
@@ -357,7 +367,7 @@ section {
   }
 }
 .plan-area {
-  background-color: #f0f0f0;
+  background-color: var(--bg-color);
 }
 
 .plan-content {
@@ -418,4 +428,74 @@ section {
   border-radius: 50%;
   overflow: hidden;
   margin: 10px auto 30px;
+}
+
+.access-maparea {
+  position: relative;
+  padding-top: 100%;
+}
+
+.access-map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .access-content {
+    display: flex;
+    align-items: center;
+    padding-left: 150px;
+  }
+  .access-maparea {
+    padding-top: 30%;
+  }
+}
+.pagetop {
+  text-align: right;
+  padding: 15px;
+  background-color: var(--bg-color);
+}
+.pagetop a::after {
+  content: "";
+  background: url(../img/list-marker.svg) no-repeat;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 0 3px 10px;
+  transform: rotate(-90deg);
+}
+
+.foot-area {
+  color: #fff;
+  text-align: center;
+  padding-top: 40px;
+  background-color: #586680;
+}
+
+.foot-logo {
+  margin: 0 auto 20px;
+}
+
+.text-phone {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+  margin-bottom: 40px;
+}
+.text-phone a {
+  color: #fff;
+}
+
+.foot-area_copy {
+  color: #fff;
+  font-size: 12px;
+  display: inline-block;
+  width: 100%;
+  padding: 10px;
+  background: #333;
 }/*# sourceMappingURL=style.css.map */
