--- a/lesson7/sass/_top.scss
+++ b/lesson7/sass/_top.scss
@@ -251,7 +251,7 @@
 
 // プラン
 .plan-area {
-  background-color: #f0f0f0;
+  background-color: var(--bg-color);
 }
 
 .plan-content {
@@ -316,4 +316,80 @@
     overflow: hidden;
     margin: 10px auto 30px;
   }
+}
+
+.access-maparea {
+  position: relative;
+  padding-top: 100%; // aspect-ratio: 1 / 1;
+}
+
+.access-map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@include mq {
+  .access-content {
+    display: flex;
+    align-items: center;
+    padding-left: 150px;
+  }
+
+  .access-maparea {
+    padding-top: 30%;
+  }
+}
+
+// ページトップ
+.pagetop {
+  text-align: right;
+  padding: 15px;
+  background-color: var(--bg-color);
+
+  a::after {
+    content: '';
+    background: url(../img/list-marker.svg) no-repeat;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 0 3px 10px;
+    transform: rotate(-90deg);
+  }
+}
+
+// フッター
+.foot-area {
+  color: #fff;
+  text-align: center;
+  padding-top: 40px;
+  background-color: #586680;
+}
+
+.foot-logo {
+  margin: 0 auto 20px;
+}
+
+.text-phone {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: .1em;
+  margin-bottom: 40px;
+
+  a {
+    color: #fff;
+  }
+}
+
+.foot-area_copy {
+  color: #fff;
+  font-size: 12px;
+  display: inline-block;
+  width: 100%;
+  padding: 10px;
+  background: #333;
 }
