--- a/lesson8/css/style.css
+++ b/lesson8/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --text-color: #292929;
   --link-color: #292929;
+  --text-jp: "Noto Sans JP", sans-serif;
 }
 
 *,
@@ -152,7 +153,7 @@ body.open .header-button span::after {
   width: 100%;
   height: 100%;
   background-color: rgba(229, 229, 229, 0.9);
-  font-family: "Noto Sans JP", sans-serif;
+  font-family: var(--text-jp);
   font-size: 20px;
   font-weight: 900;
   transform: translateX(100%);
@@ -180,9 +181,7 @@ body.open .header-nav {
   margin-bottom: 0;
 }
 .header-nav-item a {
-  color: #fff;
   text-decoration: none;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.5), 0 0 8px rgba(0, 0, 0, 0.3);
 }
 @media screen and (min-width: 768px) {
   .header-nav-item {
@@ -191,4 +190,120 @@ body.open .header-nav {
   .header-nav-item:nth-child(n+2) {
     margin-left: 2em;
   }
+}
+
+.footer {
+  padding: 1em 0;
+  width: 100%;
+}
+.top .footer, .profile .footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.footer-txt {
+  font-size: 12px;
+  text-align: center;
+}
+
+body.top,
+body.profile {
+  background: url(../img/bg_01.jpg) no-repeat center center/cover;
+}
+
+.profile .header-logo path,
+.works .header-logo path {
+  fill: var(--text-color);
+}
+
+.article-title {
+  margin-bottom: 0.5em;
+  font-family: var(--text-jp);
+  font-size: 48px;
+  font-weight: 300;
+  letter-spacing: 0.05em;
+  text-align: center;
+}
+
+.article-title_sub {
+  margin-bottom: 1em;
+  font-size: 21px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .article-title_sub {
+    font-size: 24px;
+  }
+}
+.article-title_sub span {
+  display: inline-block;
+  margin-left: 1em;
+  border-left: 1px solid var(--text-color);
+  padding-left: 1em;
+  font-weight: normal;
+}
+
+body.top {
+  color: #fff;
+}
+body.top a {
+  color: #fff;
+  text-shadow: 0 0 6px #000;
+}
+body.top .header-button span {
+  background-color: #fff;
+}
+
+.top-title {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: 0;
+  font-family: var(--text-jp);
+  font-size: 8vw;
+  font-weight: 900;
+  white-space: nowrap;
+  transform: translate(-50%, -50%);
+}
+@media screen and (min-width: 768px) {
+  .top-title {
+    font-size: 4vmax;
+  }
+}
+.top-title i {
+  display: block;
+  font-family: "Romanesco", cursive;
+  font-style: normal;
+  font-weight: normal;
+}
+@media screen and (min-width: 768px) {
+  .top-title i {
+    display: inline;
+  }
+}
+
+.profile main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(229, 229, 229, 0.8);
+  line-height: 1.6;
+}
+
+.profile .article-inner {
+  max-width: 460px;
+}
+
+.profile-list dt {
+  float: left;
+  clear: left;
+  margin-right: 2em;
 }/*# sourceMappingURL=style.css.map */
