--- a/lesson8/sass/_common.scss
+++ b/lesson8/sass/_common.scss
@@ -157,7 +157,7 @@ body.open {
   width: 100%;
   height: 100%;
   background-color: rgba(229,229,229, .9);
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: var(--text-jp);
   font-size: 20px;
   font-weight: 900;
   transform: translateX(100%);
@@ -189,12 +189,12 @@ body.open {
   }
 
   a {
-    color: #fff;
     text-decoration: none;
-    text-shadow:
-      0 0 2px rgba(0,0,0,.5),
-      0 0 8px rgba(0,0,0,.3)
-      ;
+    // color: #fff;
+    // text-shadow:
+    //   0 0 2px rgba(0,0,0,.5),
+    //   0 0 8px rgba(0,0,0,.3)
+    //   ;
   }
 
   // 768~
@@ -208,4 +208,63 @@ body.open {
 
   }
 
+}
+
+// フッター
+.footer {
+  padding: 1em 0;
+  width: 100%;
+
+  .top &,
+  .profile & {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
+}
+
+.footer-txt {
+  font-size: 12px;
+  text-align: center;
+}
+
+body.top,
+body.profile {
+  background: url(../img/bg_01.jpg) no-repeat center center / cover;
+  // background-size: cover;
+}
+
+// ロゴ
+.profile .header-logo path,
+.works .header-logo path {
+  fill: var(--text-color);
+}
+
+// ページタイトル
+.article-title {
+  margin-bottom: 0.5em;
+  font-family: var(--text-jp);
+  font-size: 48px;
+  font-weight: 300;
+  letter-spacing: .05em;
+  text-align: center;
+}
+
+// サブタイトル
+.article-title_sub {
+  margin-bottom: 1em;
+  font-size: 21px;
+  text-align: center;
+
+  @include mq {
+    font-size: 24px;
+  }
+
+  span {
+    display: inline-block;
+    margin-left: 1em;
+    border-left: 1px solid var(--text-color);
+    padding-left: 1em;
+    font-weight: normal;
+  }
 }
