--- a/lesson8/css/style.css
+++ b/lesson8/css/style.css
@@ -166,11 +166,11 @@ body.open .header-nav {
   .header-nav {
     position: static;
     flex-direction: row;
-    background-color: grey;
     transform: none;
     justify-content: flex-end;
     width: auto;
     height: auto;
+    background: transparent;
   }
 }
 
@@ -280,6 +280,32 @@ body.top .header-button span {
 @media screen and (min-width: 768px) {
   .top-title i {
     display: inline;
+  }
+}
+
+.works main {
+  padding: 100px 20px;
+}
+
+.works-list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 150px);
+  grid-template-rows: repeat(6, 100px);
+  grid-gap: 20px;
+  margin: 0 auto;
+  width: 320px;
+}
+.works-list li img {
+  display: block;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .works-list {
+    grid-template-columns: repeat(4, 210px);
+    grid-template-rows: repeat(3, 140px);
+    grid-gap: 30px;
+    width: 930px;
   }
 }
 
