--- a/lesson9/sass/pages/_top.scss
+++ b/lesson9/sass/pages/_top.scss
@@ -141,3 +141,44 @@ body.top {
     }
   }
 } //.top-feature
+
+// News
+.top-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -10px;
+
+  li {
+    width: 100%;
+    padding: 0 10px;
+    margin-bottom: 30px;
+
+    a {
+      display: flex;
+      align-items: center;
+    }
+
+    img {
+      flex: 0 1 90px;
+      // max-width: 90px;
+    }
+
+    .top-list_info {
+      margin-left: 20px;
+    }
+
+    time {
+      font-size: 14px;
+      color: var(--text-color);
+    }
+
+    .top-list_title {
+      margin-top: 0.25em;
+      line-height: 1.4;
+    }
+
+    @include mq(md) {
+      width: 50%;
+    }
+  } //li
+}
